# Orvex

./: .gitignore  README.md  pyproject.toml  requirements-web.txt  requirements.txt
core/: active_learning.py  annotation_review.py  api_server.py  audit.py  augmentor.py  autolabel.py  calibration.py  continuous_learning.py  dataset_builder.py  depth_estimator.py  edge_exporter.py  experiment_tracker.py  export_profiles.py  extractor_gopro.py  extractor_insta360.py  extractor_sensorlogger.py  inference_server.py  insta360_processor.py  insv_telemetry.py  lane_detector.py  models.py  occupancy.py  reconstructor.py  road_analytics.py  segmentation.py  session_manager.py  slam_validator.py  synchronizer.py  tracker.py  trainer.py  utils.py  versioning.py
desktop/: app.py  main.py  mainwindow.py  theme.py  workers.py
labelox/: Dockerfile.web  docker-compose.yml  pyproject.toml  requirements-web.txt  requirements.txt  setup.sh
labelox/core/: annotation_engine.py  auto_annotator.py  classifier.py  database.py  exporter.py  image_manager.py  importer.py  models.py  review_engine.py  sam_engine.py  similarity_engine.py  stats_engine.py  tracker.py  utils.py
labelox/desktop/: app.py  main.py  mainwindow.py  theme.py  workers.py
labelox/desktop/widgets/: annotation_canvas.py  auto_annotate_widget.py  export_widget.py  image_browser.py  label_panel.py  properties_panel.py  review_widget.py  stats_widget.py  timeline_widget.py
labelox/web/backend/: auth.py  main.py  response.py  tasks.py  websocket.py
labelox/web/backend/routes/: annotations.py  auto_annotate.py  export.py  images.py  projects.py  review.py  sam.py  stats.py  users.py
labelox/web/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
labelox/web/frontend/src/: App.jsx  index.css
labelox/web/frontend/src/api/: client.js
labelox/web/frontend/src/components/: AnnotationCanvas.jsx  ImageBrowser.jsx  LabelPanel.jsx  ProgressOverlay.jsx  Toolbar.jsx
labelox/web/frontend/src/pages/: AnnotationView.jsx  ExportPage.jsx  ProjectDashboard.jsx  ProjectList.jsx  ReviewPage.jsx
labelox/web/frontend/src/store/: useStore.js
tests/: conftest.py  test_active_learning.py  test_annotation_review.py  test_api_server.py  test_audit.py  test_augmentor.py  test_autolabel.py  test_calibration.py  test_continuous_learning.py  test_dataset_builder.py  test_depth_estimator.py  test_edge_exporter.py  (+21 more)
(+93 files in other folders)
